--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+  <% if flash[:notice] %>
+  <p>
+    <%= flash[:notice] %>
+  </p>
+    <% end %>
   <li>
     <%= render 'layouts/menu' %>
   </li>
