Add spec for navigation and Create Book

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,2 +1,4 @@
-<%= link_to "All books", books_path %>
-<%= link_to "Add new book", new_book_path %>
+<%= link_to "All Books", books_path %>
+<%= link_to "Add New Book", new_book_path %>
+<%#= link_to "Authors", authors_path %>
+<%#= link_to "Add new autor", new_author_path %>
