--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-  <%= render 'layouts/flashes' %>>
+  <%= render 'layouts/flashes' %>
   <li>
     <%= render 'layouts/menu' %>
   </li>
