Update Books to work with new Publisher

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <%= f.label :publisher %><br/>
-    <%= f.text_field :publisher %>
+    <%= f.collection_select :publisher_id, Publisher.order(:name), :id, :name %>
   </p>
 
   <p>
