--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,5 @@
-<%= link_to "All Books", books_path %>
-<%= link_to "Add New Book", new_book_path %>
+<%= link_to "Books", books_path %>
+<%= link_to "Publishers", publishers_path %>
+
 <%#= link_to "Authors", authors_path %>
 <%#= link_to "Add new autor", new_author_path %>
