Errors Messages Refactor

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@book) do |f| %>
 
-  <%= render 'errors' %>
+  <%= render 'shared/errors', object: @book %>
 
   <p>
     <%= f.label :title %><br/>
