--- a/app/views/publishers/_form.html.erb
+++ b/app/views/publishers/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@publisher) do |f| %>
 
-  <%= render 'errors' %>
+  <%= render 'shared/errors', object: @publisher %>
 
   <p>
     <%= f.label :name %><br/>
