--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,5 +1,3 @@
 <%= link_to "Books", books_path %>
 <%= link_to "Publishers", publishers_path %>
-
-<%#= link_to "Authors", authors_path %>
-<%#= link_to "Add new autor", new_author_path %>
+<%= link_to "Authors", authors_path %>
