--- a/app/views/publishers/_form.html.erb
+++ b/app/views/publishers/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_field :name, autofocus: true %>
   </p>
   <p>
-    <%= f.label :origin %><br/>
+    <%= f.label :origin, "Origin county" %><br/>
     <%= f.text_field :origin %>
   </p>
 
