--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Add New Author", new_author_path %>
 
 <h1>Authors</h1>
+<p>Authors: <%= @authors.count %> </p>
 
 <% @authors.each do |author| %>
   <p>
