--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,3 +1,15 @@
-<%= link_to "Books", books_path %>
-<%= link_to "Publishers", publishers_path %>
-<%= link_to "Authors", authors_path %>
+<p>
+  <% if current_user %>
+    <%= link_to current_user.name, current_user %>
+    <%= link_to "Sign Out", session_path, method: :delete %>
+  <% else %>
+    <%= link_to "Sign Up", signup_path %>
+    <%= link_to "Sign In", new_session_path %>
+  <% end %>
+</p>
+<p>
+  <%= link_to "Books", books_path %>
+  <%= link_to "Publishers", publishers_path %>
+  <%= link_to "Authors", authors_path %>
+  <%= link_to "Users", users_path %>
+</p>
