--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -13,5 +13,6 @@
   </p>
 <% end %>
 
-
-<%= link_to "Edit", edit_author_path %>
+<% if current_user_admin? %>
+  <%= link_to "Edit", edit_author_path %>
+<% end %>
