--- a/app/views/publishers/show.html.erb
+++ b/app/views/publishers/show.html.erb
@@ -14,4 +14,6 @@
   </p>
 <% end %>
 
-<%= link_to "Edit", edit_publisher_path %>
+<% if current_user_admin? %>
+  <%= link_to "Edit", edit_publisher_path %>
+<% end %>
