--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,4 +12,7 @@
   <%= link_to "Publishers", publishers_path %>
   <%= link_to "Authors", authors_path %>
   <%= link_to "Users", users_path %>
+  <% if current_user_admin? %>
+    <%= link_to "Reservations", reservations_path %>
+  <% end %>
 </p>
