--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,10 +4,6 @@
   User: <%= link_to @reservation.user.name, user_path(@reservation.user) %>
 </p>
 <p>
-  <% if @reservation.status_up == true %>
-    Book is reserved until:
-    <%= @reservation.date_of_return.strftime('%d-%m-%Y') %>
-  <% else %>
-    <%= "Reservation has allready been canceled" %>
-  <% end %>
+  Book status:
+    <%= @reservation.status %>
 </p>
