--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,9 +21,9 @@
     <% if current_user_admin? %>
       <%= button_to "Change Reservation", edit_book_reservation_path(@book, @current_reservation), method: :get %>
     <% end %>
-  <% elsif @book.reservations.status_lost %>
-<%= "Book is lost" %>
-    <% else %>
+  <% elsif @book_lost %>
+    <%= "Book is lost" %>
+  <% else %>
     <%= button_to "Make Reservation", book_reservations_path(@book) %>
   <% end %>
 <% end %>
