Authors birth_year update

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,8 +1,8 @@
 <h1> <%= @author.name %> </h1>
 
 <p>
-  Birth year:
-  <%= @author.birth_year %>
+  Date of birth:
+  <%= @author.birth_date %>
 </p>
 <p>
   <%= "Book".pluralize(@books.size) %>:
