--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -7,8 +7,8 @@
     <%= f.text_field :name, autofocus: true %>
   </p>
   <p>
-    <%= f.label :birth_year %><br/>
-    <%= f.number_field :birth_year %>
+    <%= f.label :birth_date %><br/>
+    <%= f.date_select :birth_date %>
   </p>
 
   <%= f.submit %>
