--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   Date of birth:
-  <%= @author.birth_date %>
+  <%= @author.birth_date.strftime('%d-%m-%Y') %>
 </p>
 <p>
   <%= "Book".pluralize(@books.size) %>:
