Update views and controllers to not require admin user

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
-<% if current_user_admin? %>
+<%# if current_user_admin? %>
   <%= link_to "Add New Book", new_book_path %>
-<% end %>
+<%# end %>
 
 <h1>Books</h1>
 <p>Available books: <%= @books.length %> </p>
