--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,6 +1,6 @@
-<% if current_user_admin? %>
+<%# if current_user_admin? %>
   <%= link_to "Add New Author", new_author_path %>
-<% end %>
+<%# end %>
 
 <h1>Authors</h1>
 <p>Authors: <%= @authors.count %> </p>
