--- a/app/views/publishers/index.html.erb
+++ b/app/views/publishers/index.html.erb
@@ -1,6 +1,6 @@
-<% if current_user_admin? %>
+<%# if current_user_admin? %>
   <%= link_to "Add New Publisher", new_publisher_path %>
-<% end %>
+<%# end %>
 
 <h1>Publishers</h1>
 <p>Publishers: <%= @publishers.count %> </p>
