Fix Author and Publisher Crud Specs

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,9 +1,11 @@
 <h1> <%= @author.name %> </h1>
 
 <p>
+  Date of birth:
   <% if @author.birth_date.present? %>
-    Date of birth:
     <%= @author.birth_date.strftime('%d-%m-%Y') %>
+    <% else %>
+  <%= 'Not given' %>
   <% end %>
 </p>
 <p>
