Menu links refactor

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -8,11 +8,20 @@
   <% end %>
 </p>
 <p>
+  <%= link_to "Authors", authors_path %>
   <%= link_to "Books", books_path %>
   <%= link_to "Publishers", publishers_path %>
-  <%= link_to "Authors", authors_path %>
   <%= link_to "Users", users_path %>
   <% if current_user_admin? %>
     <%= link_to "Reservations", reservations_path %>
   <% end %>
 </p>
+
+<p>
+  <%= link_to "Add New Author", new_author_path %>
+  <%#= link_to "Add New Author", new_author_path if policy(@author).create? %>
+  <%= link_to "Add New Book", new_book_path %>
+  <%#= link_to "Add New Book", new_book_path if policy(@book).create? %>
+  <%= link_to "Add New Publisher", new_publisher_path %>
+  <%#= link_to "Add New Publisher", new_publisher_path if policy(@publisher).create?%>
+  </p>
