Reservations contracts, service objects, controller, form update + spec

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -2,7 +2,7 @@
 
   <p>
     <%= f.label :status %><br/>
-    <%= f.select :status, [["Reserved", "reserved"], ["Borrowed", "borrowed"], ["Returned", "returned"], ["Lost", "lost"]] %>
+    <%= f.select :status, [["Reserved", 0], ["Borrowed", 1], ["Returned", 2], ["Lost", 3]] %>
   </p>
 
   <p>
