Add author policy

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Add New Author", new_author_path if policy(Author).create? %>
+
 <h1>Authors</h1>
 <p>Authors: <%= @authors.count %> </p>
 
