--- a/app/views/publishers/show.html.erb
+++ b/app/views/publishers/show.html.erb
@@ -14,6 +14,4 @@
   </p>
 <% end %>
 
-<% if current_user_admin? %>
-  <%= link_to "Edit", edit_publisher_path %>
-<% end %>
+<%= link_to "Edit", edit_publisher_path if policy(Publisher).update? %>
