--- a/app/views/publishers/show.html.erb
+++ b/app/views/publishers/show.html.erb
@@ -15,3 +15,4 @@
 <% end %>
 
 <%= link_to "Edit", edit_publisher_path if policy(Publisher).update? %>
+<%= link_to "Delete Publisher", publisher_path(@publisher), method: :delete, data: { confirm: 'Are you sure?' } if policy(Publisher).destroy?%>
